# vrms-arch

./: .gitignore  LICENSE.md  PKGBUILD  README.md  pyproject.toml  setup.cfg  vrms
src/vrms_arch/: __init__.py  __main__.py  disambiguation.py  license_finder.py
vrms_arch/: license_finder.py  unambiguous_db.py
