[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "vrms-arch"
version = "2.0.1"
description = "Virtual Richard M. Stallman for Arch Linux"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    {name="Andrew Clunis", email="andrew@orospakr.ca"},
    {name="gardenapple", email="mailbox@appl.garden"},
]
classifiers = [
    "Environment :: Console",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Topic :: System :: Software Distribution",
]

[project.urls]
"Homepage" = "https://github.com/gardenappl/vrms-arch"
"Bug Tracker" = "https://github.com/gardenappl/vrms-arch/issues"

[project.scripts]
vrms = "vrms_arch:vrms"
