[metadata]
name = vrms-arch
version = 2.0
maintainer = gardenapple
maintainer_email = gardenapple@posteo.net
description = Virtual Richard M. Stallman for Arch Linux
author = Andrew Clunis
author_email = andrew@orospakr.ca
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gardenappl/vrms-arch
project_urls =
	Bug Tracker = https://github.com/gardenappl/vrms-arch/issues
classifiers =
	Environment :: Console
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: System :: Software Distribution

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        vrms = vrms_arch:vrms
